sk - updated meet the founder

--- a/index.html
+++ b/index.html
@@ -75,25 +75,38 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="section about-bg">
-    <div class="container about-content" data-aos="fade-up">
-      <div class="about-img">
-        <img src="https://placehold.co/400x400/588157/ffffff?text=Shalu+Ahuja" alt="Shalu Ahuja portrait" />
-      </div>
-      <div class="about-text">
-        <h2 class="section-title font-playfair">Meet Shalu Ahuja</h2>
-        <p>
-          <strong>Shalu Ahuja</strong> is a visionary leader, mentor, and the driving force behind Sthir. With 15+ years of experience in mentorship and business development, she has dedicated her career to unlocking the potential within young minds.
-        </p>
-        <p>
-          Her passion is guiding students worldwide through the journey of self-discovery and company-building. Shalu believes that true leadership begins with a stable mind and strong sense of self—the very essence of 'Sthir'.
-        </p>
-        <p>
-          She provides not just tools and strategies, but also unwavering support to help entrepreneurs and students navigate challenges and grow.
-        </p>
-      </div>
+<!-- About Section -->
+<section id="about" class="section about-bg">
+  <div class="container about-content" data-aos="fade-up">
+    <div class="about-img">
+      <img src="https://placehold.co/400x400/588157/ffffff?text=Shalu+Ahuja" alt="Shalu Ahuja portrait" />
     </div>
-  </section>
+    <div class="about-text">
+      <h2 class="section-title font-playfair">Meet Sthir Mind</h2>
+      
+      <h3>Founder: Shalu Ahuja</h3>
+      <p>
+        Someone who’s walked and worn many paths.<br />
+        The kind that collects ranks and wins on paper. The kind that prescribes and consults. And the kind that feels lost, overwhelmed, and swallowed by noise.
+      </p>
+      <p>
+        An engineer and business leader by profession and a flawsome parent of young adults in life, Shalu has spent over 25 years building high-performing teams, products, and services.
+      </p>
+      <p>
+        For the past decade, she’s walked alongside young people through identity crashes, career pivots, and the quiet distress of not knowing what’s next. In every conversation, the same truth emerged: what most young people lack isn’t ambition. It’s anchoring.
+      </p>
+      <p>
+        Sthir is born from her lived tension between speed and stillness, becoming and being, outer success and inner truth. She now brings together structure and soul, real tools and real talk, for the next generation to build not just careers or companies, but conscious lives.
+      </p>
+      
+      <h3>Founding Circle</h3>
+      <p>
+        Meet the Founding Circle—the group that’s refined the Sthir structures and shaped them into what young minds really need in today’s fast-paced AI world. They are co-architects, sounding boards, and relentless optimists, bringing both experience and empathy to every conversation. Together, they’ve made Sthir not just possible, but practical.
+      </p>
+    </div>
+  </div>
+</section>
+
 
   <!-- What We Enable / Programs -->
   <section id="services" class="section glass-section">
