sk - added blog and contact

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sthir – Stay Sthir, Stand Tall</title>
+  <title>Sthir – Sit Sthir, Stand Tall</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"/>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet"/>
@@ -19,7 +19,9 @@
         <li><a href="#philosophy">Philosophy</a></li>
         <li><a href="#ai-tools">AI Tools</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="/contact/">Contact</a></li>
+        <li><a href="/blog/">Blog</a></li>
+
 
         <li
         style="margin-left:1.2rem; display:flex; align-items:center; height:100%;"
@@ -63,7 +65,7 @@
   <section class="hero" id="hero">
     <div class="container hero-inner" data-aos="fade-up">
       <span class="badge">✨ Now Accepting 2025 Cohort Applications</span>
-      <h1 class="hero-title font-playfair">Stay Sthir, Stand Tall</h1>
+      <h1 class="hero-title font-playfair">Sit Sthir, Stand Tall</h1>
       <p class="hero-desc">
         Empowering the next generation of leaders and entrepreneurs to build with purpose and resilience.
       </p>
@@ -74,7 +76,6 @@
     </div>
   </section>
 
-  <!-- About Section -->
 <!-- About Section -->
 <section id="about" class="section about-bg">
   <div class="container about-content" data-aos="fade-up">
@@ -218,37 +219,12 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section glass-section contact-bg">
-    <div class="container contact-container" data-aos="fade-up">
-      <div class="contact-header">
-        <h2 class="section-title font-playfair">Begin Your Journey</h2>
-        <p>Ready to discover your potential? Reach out to learn more about our programs and how you can get started.</p>
-      </div>
-      <form class="contact-form" aria-label="Contact Form" autocomplete="off">
-        <div class="form-group">
-          <input type="text" id="name" name="name" required />
-          <label for="name">Name</label>
-        </div>
-        <div class="form-group">
-          <input type="email" id="email" name="email" required />
-          <label for="email">Email</label>
-        </div>
-        <div class="form-group">
-          <textarea id="message" name="message" rows="4" required></textarea>
-          <label for="message">Message</label>
-        </div>
-        <button type="submit" class="btn btn-primary send-btn">Send Message</button>
-      </form>
-    </div>
-  </section>
-
   <!-- Footer -->
   <footer class="footer">
     <div class="container footer-inner">
       <div>
         <div class="font-playfair footer-brand">Sthir</div>
-        <div class="footer-tagline">Stay Sthir, Stand Tall.</div>
+        <div class="footer-tagline">Sit Sthir, Stand Tall.</div>
       </div>
       <ul class="footer-links">
         <li><a href="#about">About</a></li>
