--- a/contact/index.html
+++ b/contact/index.html
@@ -11,17 +11,24 @@
   <!-- Global styles -->
   <link rel="stylesheet" href="../styles.css"/>
 
-  <!-- Contact page overrides -->
+  <!-- Contact page overrides (this file below) -->
   <link rel="stylesheet" href="./contact.css"/>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet"/>
 </head>
 <body>
+
   <!-- Navbar -->
   <header class="navbar" id="navbar">
     <nav class="container nav-inner" aria-label="Main navigation">
-      <a href="../" class="brand font-playfair" aria-label="Sthir Home">Sthir</a>
+      <a href="/" class="brand" aria-label="Sthir Home">
+        <img src="../images/logo.jpeg" alt="" class="brand-logo" />
+        <div class="brand-text">
+          <span class="brand-title font-playfair">Sthir</span>
+          <span class="brand-tagline">Sit Sthir, Stand Tall</span>
+        </div>
+      </a>
       <ul class="nav-links" id="nav-links">
         <li><a href="../#about">About</a></li>
         <li><a href="../#services">Programs</a></li>
@@ -29,8 +36,26 @@
         <li><a href="../#ai-tools">AI Tools</a></li>
         <li><a href="../#testimonials">Testimonials</a></li>
         <li><a class="active" href="/contact/">Contact</a></li>
-        <li><a href="#" id="book-call-link" aria-label="Book a 30-minute call">Book Call</a></li>
         <li><a href="/blog/">Blog</a></li>
+
+        <li style="margin-left:1.2rem; display:flex; align-items:center; height:100%;">
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLScMgIgvs0fhy520HeA-aDZCrtfYprspWlODNZ8Khom50pzGuA/viewform?usp=sharing"
+            target="_blank" rel="noopener"
+            style="
+              display:inline-flex; align-items:center; justify-content:center;
+              padding:0.25rem 1.1rem; border-radius:999px; font-weight:500; font-size:1.07rem;
+              cursor:pointer; border:none;
+              background:linear-gradient(93deg, #1e3a8a 65%, #2563eb 100%);
+              color:#fff; box-shadow:0 2px 8px 0 rgba(30,58,138,0.18); text-decoration:none; line-height:1.35;
+              transition:background 0.18s, box-shadow 0.18s, transform 0.14s; outline:none;
+            "
+            onmouseover="this.style.background='linear-gradient(93deg, #0f1e5a 90%, #3b82f6 100%)'; this.style.transform='translateY(-2px) scale(1.03)'; this.style.boxShadow='0 6px 18px rgba(30,58,138,0.28)';"
+            onmouseout="this.style.background='linear-gradient(93deg, #1e3a8a 65%, #2563eb 100%)'; this.style.transform='none'; this.style.boxShadow='0 2px 8px 0 rgba(30,58,138,0.18)';"
+          >
+            Apply Now
+          </a>
+        </li>
       </ul>
       <button id="nav-toggle" class="nav-toggle" aria-label="Open Menu" aria-expanded="false">
         <span></span><span></span><span></span>
@@ -38,52 +63,83 @@
     </nav>
   </header>
 
-  <!-- Contact Form -->
+  <!-- Contact Section -->
   <section id="contact" class="section glass-section contact-bg">
     <div class="container contact-container" data-aos="fade-up">
       <div class="contact-header">
         <h2 class="section-title font-playfair">Let’s Connect</h2>
-        <p>Choose the option that works best for you.</p>
+        <p>
+          Choose the option that works best for you. Prefer email? 
+          <a href="mailto:shalu@sthir.education">shalu@sthir.education</a>
+        </p>
       </div>
-  
+
       <div class="primary-cta">
         <button type="button" class="btn btn-primary with-icon" id="open-booking-2" aria-label="Book a 30-minute call">
           <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
             <path d="M7 2v2H5a2 2 0 0 0-2 2v2h18V6a2 2 0 0 0-2-2h-2V2h-2v2H9V2H7Zm14 8H3v10a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V10Z"/>
           </svg>
-          Book a 30-min Call
+          Book a Call with Sthir
         </button>
       </div>
-  
+
       <div class="divider">— or —</div>
-  
-      <form class="contact-form contact-page-form" aria-label="Contact Form" autocomplete="off" novalidate>
+
+      <!-- Formspree form -->
+      <form
+        class="contact-form contact-page-form"
+        aria-label="Contact Form"
+        action="https://formspree.io/f/xandedld"
+        method="POST"
+        autocomplete="off"
+        novalidate
+      >
+        <!-- Honeypot (spam trap) -->
+        <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
+
         <div class="form-group">
           <input type="text" id="name" name="name" required />
           <label for="name">Name</label>
+          <span class="form-error hidden" id="name-error">Please enter your name.</span>
         </div>
+
         <div class="form-group">
           <input type="email" id="email" name="email" required />
           <label for="email">Email</label>
+          <span class="form-error hidden" id="email-error">Please enter a valid email address.</span>
         </div>
+
         <div class="form-group">
           <textarea id="message" name="message" rows="4" required></textarea>
           <label for="message">Message</label>
+          <span class="form-error hidden" id="message-error">Please enter a message.</span>
         </div>
+
+        <!-- Optional subject line -->
+        <input type="hidden" name="_subject" value="New message from Sthir contact page" />
+
         <div class="form-actions">
-          <button type="submit" class="btn btn-secondary send-btn">Send Message</button>
+          <button type="submit" class="btn btn-secondary send-btn" id="send-btn">Send Message</button>
         </div>
+
+        <!-- success / error messages -->
+        <p class="form-note success hidden" id="contact-success">
+          Thanks! We’ll get back to you soon.
+        </p>
+        <p class="form-note error hidden" id="contact-error">
+          Something went wrong. Please email us at
+          <a href="mailto:shalu@sthir.education">shalu@sthir.education</a>.
+        </p>
       </form>
-  
+
       <noscript>
         <p>
           JavaScript is disabled. You can book directly at
-          <a href="https://shalu.youcanbook.me/" rel="noopener">this link</a>.
+          <a href="https://cal.com/sthireducation/" rel="noopener">this link</a>.
         </p>
       </noscript>
     </div>
   </section>
-  
 
   <!-- Footer -->
   <footer class="footer">
@@ -99,7 +155,7 @@
       </ul>
       <div class="footer-social">
         <a href="#" aria-label="Twitter">
-          <svg viewBox="0 0 24 24"><path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.71v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 11.616 0 006.29 1.84"/></svg>
+          <svg viewBox="0 0 24 24"><path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.71v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"/></svg>
         </a>
         <a href="#" aria-label="LinkedIn">
           <svg viewBox="0 0 24 24"><path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" /></svg>
@@ -115,5 +171,75 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script src="./contact.js"></script>
+
+  <!-- Inline: email validation + AJAX to Formspree -->
+  <script>
+  (function () {
+    const form = document.querySelector('.contact-page-form');
+    if (!form) return;
+
+    const sendBtn    = document.getElementById('send-btn');
+    const nameInput  = document.getElementById('name');
+    const emailInput = document.getElementById('email');
+    const msgInput   = document.getElementById('message');
+
+    const nameErr  = document.getElementById('name-error');
+    const emailErr = document.getElementById('email-error');
+    const msgErr   = document.getElementById('message-error');
+
+    const successEl = document.getElementById('contact-success');
+    const errorEl   = document.getElementById('contact-error');
+
+    function isValidEmail(email) {
+      return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+    }
+    function resetErrors() {
+      [nameInput, emailInput, msgInput].forEach(i => i.classList.remove('error'));
+      [nameErr, emailErr, msgErr].forEach(el => el.classList.add('hidden'));
+      successEl?.classList.add('hidden');
+      errorEl?.classList.add('hidden');
+    }
+
+    form.addEventListener('submit', async (e) => {
+      // progressive enhancement: intercept only if fetch available
+      if (!window.fetch) return;
+
+      e.preventDefault();
+      resetErrors();
+
+      let hasError = false;
+      if (!nameInput.value.trim()) { nameInput.classList.add('error'); nameErr.classList.remove('hidden'); hasError = true; }
+      if (!isValidEmail(emailInput.value.trim())) { emailInput.classList.add('error'); emailErr.classList.remove('hidden'); hasError = true; }
+      if (!msgInput.value.trim()) { msgInput.classList.add('error'); msgErr.classList.remove('hidden'); hasError = true; }
+      if (hasError) return;
+
+      try {
+        sendBtn.disabled = true;
+        const res = await fetch(form.action, {
+          method: 'POST',
+          body: new FormData(form),
+          headers: { 'Accept': 'application/json' }
+        });
+        if (res.ok) {
+          form.reset();
+          successEl?.classList.remove('hidden');
+        } else {
+          errorEl?.classList.remove('hidden');
+        }
+      } catch {
+        errorEl?.classList.remove('hidden');
+      } finally {
+        sendBtn.disabled = false;
+      }
+    });
+
+    // floating label helper (adds .filled on blur)
+    document.querySelectorAll('.form-group input, .form-group textarea').forEach(input => {
+      input.addEventListener('blur', function() {
+        this.classList.toggle('filled', !!this.value.trim());
+      });
+    });
+  })();
+  </script>
 </body>
 </html>
