sk - added abput

--- a/contact/index.html
+++ b/contact/index.html
@@ -30,13 +30,14 @@
         </div>
       </a>
       <ul class="nav-links" id="nav-links">
-        <li><a href="../#about">About</a></li>
-        <li><a href="../#services">Programs</a></li>
-        <li><a href="../#philosophy">Philosophy</a></li>
-        <li><a href="../#ai-tools">AI Tools</a></li>
-        <li><a href="../#testimonials">Testimonials</a></li>
-        <li><a class="active" href="/contact/">Contact</a></li>
+
+        <li><a href="/#services">Programs</a></li>
+        <li><a href="/#philosophy">Philosophy</a></li>
+        <li><a href="/#ai-tools">AI Tools</a></li>
+        <li><a href="/#testimonials">Testimonials</a></li>
+        <li><a href="/contact/">Contact</a></li>
         <li><a href="/blog/">Blog</a></li>
+        <li><a href="/about">About</a></li>
 
         <li style="margin-left:1.2rem; display:flex; align-items:center; height:100%;">
           <a
@@ -46,12 +47,12 @@
               display:inline-flex; align-items:center; justify-content:center;
               padding:0.25rem 1.1rem; border-radius:999px; font-weight:500; font-size:1.07rem;
               cursor:pointer; border:none;
-              background:linear-gradient(93deg, #1e3a8a 65%, #2563eb 100%);
-              color:#fff; box-shadow:0 2px 8px 0 rgba(30,58,138,0.18); text-decoration:none; line-height:1.35;
+              background:linear-gradient(93deg, #2563eb 65%, #93c5fd 100%);
+              color:#fff; box-shadow:0 2px 8px 0 rgba(37,99,235,0.18); text-decoration:none; line-height:1.35;
               transition:background 0.18s, box-shadow 0.18s, transform 0.14s; outline:none;
             "
-            onmouseover="this.style.background='linear-gradient(93deg, #0f1e5a 90%, #3b82f6 100%)'; this.style.transform='translateY(-2px) scale(1.03)'; this.style.boxShadow='0 6px 18px rgba(30,58,138,0.28)';"
-            onmouseout="this.style.background='linear-gradient(93deg, #1e3a8a 65%, #2563eb 100%)'; this.style.transform='none'; this.style.boxShadow='0 2px 8px 0 rgba(30,58,138,0.18)';"
+            onmouseover="this.style.background='linear-gradient(93deg, #1e3a8a 90%, #bfdbfe 100%)'; this.style.transform='translateY(-2px) scale(1.03)'; this.style.boxShadow='0 6px 18px rgba(37,99,235,0.28)';"
+            onmouseout="this.style.background='linear-gradient(93deg, #2563eb 65%, #93c5fd 100%)'; this.style.transform='none'; this.style.boxShadow='0 2px 8px 0 rgba(37,99,235,0.18)';"
           >
             Apply Now
           </a>
