sk - added abput

--- a/contact/index.html
+++ b/contact/index.html
@@ -150,9 +150,10 @@
         <div class="footer-tagline">Sit Sthir, Stand Tall.</div>
       </div>
       <ul class="footer-links">
-        <li><a href="../#about">About</a></li>
-        <li><a href="../#services">Programs</a></li>
-        <li><a class="active" href="/contact/">Contact</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Programs</a></li>
+        <li><a href="#apply">Apply</a></li>
+        <li><a href="/contact/">Contact</a></li>
       </ul>
       <div class="footer-social">
         <a href="#" aria-label="Twitter">
