--- a/about/index.html
+++ b/about/index.html
@@ -16,18 +16,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet"/>
 </head>
 <body>
+  
   <!-- Navbar -->
   <header class="navbar" id="navbar">
     <nav class="container nav-inner" aria-label="Main navigation">
+      <!-- Brand (left) -->
       <a href="/" class="brand" aria-label="Sthir Home">
-        <img src="../images/logo.jpeg" alt="" class="brand-logo" />
+        <img src="./images/logo.jpeg" alt="" class="brand-logo" />
         <div class="brand-text">
           <span class="brand-title font-playfair">Sthir</span>
           <span class="brand-tagline">Sit Sthir, Stand Tall</span>
         </div>
       </a>
-      <ul class="nav-links" id="nav-links">
 
+      <!-- Spacer pushes links to the right -->
+      <div class="nav-spacer" aria-hidden="true"></div>
+
+      <!-- Desktop links (right) -->
+      <ul class="nav-links" id="nav-links">
         <li><a href="/#services">Programs</a></li>
         <li><a href="/#philosophy">Philosophy</a></li>
         <li><a href="/#ai-tools">AI Tools</a></li>
@@ -35,7 +41,6 @@
         <li><a href="/contact/">Contact</a></li>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/about">About</a></li>
-
         <li style="margin-left:1.2rem; display:flex; align-items:center; height:100%;">
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLScMgIgvs0fhy520HeA-aDZCrtfYprspWlODNZ8Khom50pzGuA/viewform?usp=sharing"
@@ -55,9 +60,42 @@
           </a>
         </li>
       </ul>
-      <button id="nav-toggle" class="nav-toggle" aria-label="Open Menu" aria-expanded="false">
+
+      <!-- Hamburger button -->
+      <button id="nav-toggle" class="nav-toggle" aria-label="Open Menu" aria-expanded="false" aria-controls="mobileMenu">
         <span></span><span></span><span></span>
       </button>
+    </nav>
+
+    <!-- Mobile menu -->
+    <nav class="mobile-menu" id="mobileMenu" aria-label="Mobile navigation">
+      <ul>
+        <li><a href="/#services">Programs</a></li>
+        <li><a href="/#philosophy">Philosophy</a></li>
+        <li><a href="/#ai-tools">AI Tools</a></li>
+        <li><a href="/#testimonials">Testimonials</a></li>
+        <li><a href="/contact/">Contact</a></li>
+        <li><a href="/blog/">Blog</a></li>
+        <li><a href="/about">About</a></li>
+        <li style="margin-left:1.2rem; display:flex; align-items:center; height:100%;">
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLScMgIgvs0fhy520HeA-aDZCrtfYprspWlODNZ8Khom50pzGuA/viewform?usp=sharing"
+            target="_blank" rel="noopener"
+            style="
+              display:inline-flex; align-items:center; justify-content:center;
+              padding:0.25rem 1.1rem; border-radius:999px; font-weight:500; font-size:1.07rem;
+              cursor:pointer; border:none;
+              background:linear-gradient(93deg, #2563eb 65%, #93c5fd 100%);
+              color:#fff; box-shadow:0 2px 8px 0 rgba(37,99,235,0.18); text-decoration:none; line-height:1.35;
+              transition:background 0.18s, box-shadow 0.18s, transform 0.14s; outline:none;
+            "
+            onmouseover="this.style.background='linear-gradient(93deg, #1e3a8a 90%, #bfdbfe 100%)'; this.style.transform='translateY(-2px) scale(1.03)'; this.style.boxShadow='0 6px 18px rgba(37,99,235,0.28)';"
+            onmouseout="this.style.background='linear-gradient(93deg, #2563eb 65%, #93c5fd 100%)'; this.style.transform='none'; this.style.boxShadow='0 2px 8px 0 rgba(37,99,235,0.18)';"
+          >
+            Apply Now
+          </a>
+        </li>
+      </ul>
     </nav>
   </header>
 
@@ -210,5 +248,7 @@
   <script>try { AOS.init(); } catch(e) {}</script>
   <script src="../main.js"></script>
   <script src="./about.js"></script>
+  <script src="../hamburgermenu.js"></script>
+
 </body>
 </html>
