sk - consistent header throughout

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,12 +10,12 @@
 
   <!-- Global styles -->
   <link rel="stylesheet" href="../styles.css"/>
-
   <!-- Contact page overrides (this file below) -->
   <link rel="stylesheet" href="./contact.css"/>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet"/>
+
 </head>
 <body>
 
@@ -24,7 +24,7 @@
     <nav class="container nav-inner" aria-label="Main navigation">
       <!-- Brand (left) -->
       <a href="/" class="brand" aria-label="Sthir Home">
-        <img src="./images/logo.jpeg" alt="" class="brand-logo" />
+        <img src="../images/logo.jpeg" alt="" class="brand-logo" />
         <div class="brand-text">
           <span class="brand-title font-playfair">Sthir</span>
           <span class="brand-tagline">Sit Sthir, Stand Tall</span>
