--- a/index.html
+++ b/index.html
@@ -115,42 +115,41 @@
   </header>
 
 
-<!-- Hero / Welcome Section -->
-<section class="hero" id="hero">
-  <div class="container hero-inner" data-aos="fade-up">
+  <!-- Hero / Welcome Section -->
+  <section class="hero" id="hero">
+    <div class="container hero-inner" data-aos="fade-up">
 
-    <!-- Intro Badge -->
-    <span class="badge">✨ Now accepting applications for Fall 2025 Cohort</span>
+      <!-- Intro Badge -->
+      <span class="badge">✨ Now accepting applications for Fall 2025 Cohort</span>
 
-    <!-- Main Heading -->
-    <h1 class="hero-title font-playfair">Welcome to Sthir</h1>
-    
-    <p class="hero-desc">
-    Be a part of mindful leadership sandbox where young people connect to themselves, test ideas in the real world, and grow through doing—not just thinking.
-    </p>
+      <!-- Main Heading -->
+      <h1 class="hero-title font-playfair">Welcome to Sthir</h1>
+      
+      <p class="hero-desc">
+      Be a part of mindful leadership sandbox where young people connect to themselves, test ideas in the real world, and grow through doing—not just thinking.
+      </p>
 
-    <!-- Action Buttons -->
-    <div class="hero-btns">
-      <!-- Apply Now -->
-      <a class="btn btn-primary hero-btn"
-        target="_blank" rel="noopener"
-        href="https://docs.google.com/forms/d/e/1FAIpQLScMgIgvs0fhy520HeA-aDZCrtfYprspWlODNZ8Khom50pzGuA/viewform?usp=sharing">
-        Apply Now
-      </a>
+      <!-- Action Buttons -->
+      <div class="hero-btns">
+        <!-- Apply Now -->
+        <a class="btn btn-primary hero-btn"
+          target="_blank" rel="noopener"
+          href="https://docs.google.com/forms/d/e/1FAIpQLScMgIgvs0fhy520HeA-aDZCrtfYprspWlODNZ8Khom50pzGuA/viewform?usp=sharing">
+          Apply Now
+        </a>
 
-      <!-- Our Offerings -->
-      <a href="#services" class="btn btn-secondary hero-btn">
-        Our Offerings
-      </a>
+        <!-- Our Offerings -->
+        <a href="#services" class="btn btn-secondary hero-btn">
+          Our Offerings
+        </a>
 
-      <!-- Meet Sthir Mind -->
-      <!-- <a href="#about" class="btn btn-secondary hero-btn">
-        Meet Sthir Mind
-      </a> -->
+        <!-- Meet Sthir Mind -->
+        <!-- <a href="#about" class="btn btn-secondary hero-btn">
+          Meet Sthir Mind
+        </a> -->
+      </div>
     </div>
-  </div>
-</section>
-
+  </section>
 
   <!-- Our Offerings Section -->
   <section id="services" class="section glass-section">
@@ -198,7 +197,146 @@
     </div>
   </section>
 
+  <!-- 12-Week Road Map -->
+  <!-- place this right after the Hero section -->
+<section id="roadmap" class="roadmap-section">
+  <div class="container">
+    <div class="roadmap-head">
+      <h2 class="section-title font-playfair">Your 12-Week Journey</h2>
+      <p class="roadmap-subtitle">Three phases from Anchoring → Exploration → Rooting</p>
+    </div>
 
+    <div class="roadmap-map">
+      <button class="roadmap-arrow roadmap-prev" aria-label="Previous week">‹</button>
+      <button class="roadmap-arrow roadmap-next" aria-label="Next week">›</button>
+
+      <!-- widened viewBox so the finish label never clips -->
+      <svg id="roadSvg" viewBox="0 0 1680 520" role="img" aria-label="Sthir 12-week roadmap" preserveAspectRatio="xMidYMid meet">
+        <!-- phase separators -->
+        <g class="phase-sep" aria-hidden="true">
+          <line x1="560"  y1="36" x2="560"  y2="500"/>
+          <line x1="1120" y1="36" x2="1120" y2="500"/>
+          <g class="phase-pill"><rect x="260"  y="24" width="230" height="38" rx="12" ry="12"/><text x="375"  y="48" text-anchor="middle">Phase 1 · Anchoring</text></g>
+          <g class="phase-pill"><rect x="820"  y="24" width="230" height="38" rx="12" ry="12"/><text x="935"  y="48" text-anchor="middle">Phase 2 · Exploration</text></g>
+          <g class="phase-pill"><rect x="1380" y="24" width="230" height="38" rx="12" ry="12"/><text x="1495" y="48" text-anchor="middle">Phase 3 · Rooting</text></g>
+        </g>
+
+        <!-- smoother, broader road -->
+        <path id="roadBase" d="M 40 420 C 300 360, 480 300, 660 280 S 1060 320, 1245 290 S 1500 260, 1580 190" />
+        <path id="roadDash" d="M 40 420 C 300 360, 480 300, 660 280 S 1060 320, 1245 290 S 1500 260, 1580 190" />
+
+        <!-- start / finish -->
+        <g aria-hidden="true">
+          <circle cx="40" cy="420" r="6" fill="#0b1b3a"></circle>
+          <text x="56" y="428" font-size="14" fill="#0b1b3a">Start</text>
+          <text x="1620" y="170" font-size="18" fill="#0b1b3a">🏁 Finish</text>
+        </g>
+
+        <!-- waypoints injected by JS -->
+        <g id="waypoints"></g>
+      </svg>
+
+      <!-- info panel -->
+      <aside id="roadPanel" class="roadmap-panel hidden" aria-live="polite">
+        <div class="rp-badge" id="rpWeek">Week 1</div>
+        <h3 id="rpTitle">Title</h3>
+        <ul class="rp-list" id="rpList"></ul>
+      </aside>
+    </div>
+
+    <!-- Phase summaries under the map -->
+    <div class="phase-cards" aria-label="Phase summaries">
+      <article class="phase-card" data-phase="1">
+        <h3>Phase 1 · Anchoring</h3>
+        <p>Notice patterns, slow down, and choose your focus.</p>
+        <ul>
+          <li>Autopilot audit &amp; attention science</li>
+          <li>Create your personal Anchoring Map</li>
+          <li>Commit a problem space to explore</li>
+        </ul>
+      </article>
+      <article class="phase-card" data-phase="2">
+        <h3>Phase 2 · Exploration</h3>
+        <p>Run small tests, collaborate, and learn from people.</p>
+        <ul>
+          <li>Bold real-world experiments</li>
+          <li>Team charter &amp; deep listening</li>
+          <li>Jobs-to-be-Done interviews &amp; synthesis</li>
+        </ul>
+      </article>
+      <article class="phase-card" data-phase="3">
+        <h3>Phase 3 · Rooting</h3>
+        <p>Shape a point of view and ship a tangible outcome.</p>
+        <ul>
+          <li>Influence &amp; network building</li>
+          <li>MVP sprint with feedback loops</li>
+          <li>Leadership commitment &amp; next steps</li>
+        </ul>
+      </article>
+    </div>
+  </div>
+</section>
+
+  <section id="roadmap" class="roadmap-section">
+    <div class="container">
+      <div class="roadmap-map">
+        <button class="roadmap-arrow roadmap-prev" aria-label="Previous week">‹</button>
+        <button class="roadmap-arrow roadmap-next" aria-label="Next week">›</button>
+
+        <svg id="roadSvg" viewBox="0 0 1600 520" role="img" aria-label="Sthir 12-week roadmap" preserveAspectRatio="xMidYMid meet">
+          <!-- phase separators -->
+          <g class="phase-sep" aria-hidden="true">
+            <!-- lines (at ~33% and ~66%) -->
+            <line x1="533" y1="36" x2="533" y2="500"/>
+            <line x1="1066" y1="36" x2="1066" y2="500"/>
+            <!-- pills -->
+            <g class="phase-pill">
+              <rect x="250" y="24" width="220" height="38" rx="12" ry="12"></rect>
+              <text x="360" y="48" text-anchor="middle">Phase 1 · Anchoring</text>
+            </g>
+            <g class="phase-pill">
+              <rect x="785" y="24" width="220" height="38" rx="12" ry="12"></rect>
+              <text x="895" y="48" text-anchor="middle">Phase 2 · Exploration</text>
+            </g>
+            <g class="phase-pill">
+              <rect x="1318" y="24" width="220" height="38" rx="12" ry="12"></rect>
+              <text x="1428" y="48" text-anchor="middle">Phase 3 · Rooting</text>
+            </g>
+          </g>
+
+          <!-- smooth S-curve road (broader) -->
+          <path id="roadBase" fill="none"
+                d="M 40 420
+                  C 280 360, 460 300, 640 280
+                  S 1040 320, 1225 290
+                  S 1480 260, 1560 190" />
+          <path id="roadDash" fill="none"
+                d="M 40 420
+                  C 280 360, 460 300, 640 280
+                  S 1040 320, 1225 290
+                  S 1480 260, 1560 190" />
+
+          <!-- start / finish -->
+          <g aria-hidden="true">
+            <circle cx="40" cy="420" r="6" fill="#0b1b3a"></circle>
+            <text x="56" y="428" font-size="14" fill="#0b1b3a">Start</text>
+            <text x="1545" y="165" font-size="18" fill="#0b1b3a">🏁 Finish</text>
+          </g>
+
+          <!-- waypoints injected by JS -->
+          <g id="waypoints"></g>
+        </svg>
+
+        <!-- info panel -->
+        <aside id="roadPanel" class="roadmap-panel hidden" aria-live="polite">
+          <div class="rp-badge" id="rpWeek">Week 1</div>
+          <h3 id="rpTitle">Title</h3>
+          <ul class="rp-list" id="rpList"></ul>
+        </aside>
+      </div>
+    </div>
+  </section>
+  
   <!-- Philosophy Section -->
   <section id="philosophy" class="section philosophy-bg">
     <div class="container" data-aos="fade-up">
