--- a/index.html
+++ b/index.html
@@ -116,39 +116,160 @@
 
 
   <!-- Hero / Welcome Section -->
-  <section class="hero" id="hero">
-    <div class="container hero-inner" data-aos="fade-up">
+  <section id="hero-wrapper" style="--scroll: 160vh; position: relative; height: calc(100vh + var(--scroll)); background:#0b0f1a;">
+    <style>
+      /* Keep the animation scene pinned for one viewport. The wrapper gives us extra scroll space. */
+      #hero-wrapper .sticky {
+        position: sticky; top: 0; height: 100vh; overflow: hidden;
+        display: grid; place-items: center; color:#eaf0ff;
+        text-align: center; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      }
 
-      <!-- Intro Badge -->
-      <span class="badge">✨ Now accepting applications for Fall 2025 Cohort</span>
+      /* content */
+      #hero .badge{display:inline-block; background:#111827; color:#cbd5e1; padding:8px 14px; border-radius:999px; font-size:14px; border:1px solid rgba(148,163,184,.2)}
+      #hero h1{font-size:clamp(36px,5vw,56px); line-height:1.05; margin:18px 0 6px; font-family:'Playfair Display', Georgia, serif;}
+      #hero p{max-width:720px; margin:0 auto 22px; color:#c7d2fe; line-height:1.7}
+      #hero .cta a{display:inline-block; margin:6px 10px; padding:12px 22px; border-radius:10px; text-decoration:none; font-weight:600}
+      #hero .cta .primary{background:#4a6cf7; color:#fff; box-shadow:0 10px 24px rgba(74,108,247,.35)}
+      #hero .cta .secondary{background:#0b0f1a; color:#aebcff; border:2px solid #3b82f6}
 
-      <!-- Main Heading -->
-      <h1 class="hero-title font-playfair">Welcome to Sthir</h1>
-      
-      <p class="hero-desc">
-      Be a part of mindful leadership sandbox where young people connect to themselves, test ideas in the real world, and grow through doing—not just thinking.
-      </p>
+      /* ring stage */
+      #hero .ring-wrap{ position:relative; width:min(70vmin,720px); height:min(70vmin,720px); margin:14px auto 6px;}
+      #hero svg{ display:block; width:100%; height:100%; }
+      #hero .center{ position:absolute; inset:0; display:grid; place-items:center; pointer-events:none; color:#fff;
+        font-weight:700; font-size:clamp(18px,2.6vw,28px); text-shadow:0 2px 24px rgba(0,0,0,.45) }
 
-      <!-- Action Buttons -->
-      <div class="hero-btns">
-        <!-- Apply Now -->
-        <a class="btn btn--primary hero-btn" 
-          target="_blank" rel="noopener"
-          href="https://docs.google.com/forms/d/e/1FAIpQLScMgIgvs0fhy520HeA-aDZCrtfYprspWlODNZ8Khom50pzGuA/viewform?usp=sharing">
-          Apply Now
-        </a>
+      /* rings */
+      #hero .ring{ stroke-linecap:round; fill:none; opacity:.95 }
+      #hero .ring-bg{ stroke:#1f2937; opacity:.55 }
 
-        <!-- Our Offerings -->
-        <a class="btn btn--secondary hero-btn" href="#services">Our Offerings</a>
+      /* reduce motion: keep static */
+      @media (prefers-reduced-motion: reduce){
+        #hero-wrapper{ height: 100vh !important; }
+      }
+    </style>
 
+    <!-- sticky hero scene -->
+    <div class="sticky">
+      <div id="hero">
+        <span class="badge">✨ Now accepting applications for Fall 2025 Cohort</span>
+
+        <div class="ring-wrap">
+          <svg viewBox="0 0 1000 1000" aria-hidden="true">
+            <defs>
+              <!-- brandable gradients (swap colors to match your palette) -->
+              <linearGradient id="g1" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%"  stop-color="#5b7cfa"/>
+                <stop offset="40%" stop-color="#3b82f6"/>
+                <stop offset="70%" stop-color="#6366f1"/>
+                <stop offset="100%" stop-color="#22d3ee"/>
+              </linearGradient>
+              <linearGradient id="g2" x1="0%" y1="100%" x2="100%" y2="0%">
+                <stop offset="0%"  stop-color="#22d3ee"/>
+                <stop offset="50%" stop-color="#6366f1"/>
+                <stop offset="100%" stop-color="#3b82f6"/>
+              </linearGradient>
+              <linearGradient id="g3" x1="100%" y1="0%" x2="0%" y2="100%">
+                <stop offset="0%"  stop-color="#6366f1"/>
+                <stop offset="50%" stop-color="#3b82f6"/>
+                <stop offset="100%" stop-color="#22d3ee"/>
+              </linearGradient>
+
+              <!-- soft glow -->
+              <filter id="soft" x="-40%" y="-40%" width="180%" height="180%">
+                <feGaussianBlur in="SourceGraphic" stdDeviation="4" result="b"/>
+                <feMerge><feMergeNode in="b"/><feMergeNode in="SourceGraphic"/></feMerge>
+              </filter>
+            </defs>
+
+            <!-- tracks -->
+            <g opacity=".45">
+              <circle class="ring-bg" cx="500" cy="500" r="360" stroke-width="10"/>
+              <circle class="ring-bg" cx="500" cy="500" r="320" stroke-width="10"/>
+              <circle class="ring-bg" cx="500" cy="500" r="280" stroke-width="10"/>
+            </g>
+
+            <!-- animated rings -->
+            <g id="rings" filter="url(#soft)">
+              <circle id="r1" class="ring" cx="500" cy="500" r="360" stroke="url(#g1)" stroke-width="10" />
+              <circle id="r2" class="ring" cx="500" cy="500" r="320" stroke="url(#g2)" stroke-width="10" />
+              <circle id="r3" class="ring" cx="500" cy="500" r="280" stroke="url(#g3)" stroke-width="10" />
+            </g>
+          </svg>
+          <div class="center">Welcome to Sthir</div>
+        </div>
+
+        <p>Be a part of mindful leadership sandbox where young people connect to themselves, test ideas in the real world, and grow through doing — not just thinking.</p>
+        <div class="cta">
+          <a class="primary" target="_blank" rel="noopener"
+            href="https://docs.google.com/forms/d/e/1FAIpQLScMgIgvs0fhy520HeA-aDZCrtfYprspWlODNZ8Khom50pzGuA/viewform?usp=sharing">Apply Now</a>
+          <a class="secondary" href="#services">Our Offerings</a>
+        </div>
       </div>
     </div>
+
+    <!-- progress-driven drawing -->
+    <script>
+      (function(){
+        const wrapper = document.getElementById('hero-wrapper');
+        const ringsG  = document.getElementById('rings');
+        const rings   = [document.getElementById('r1'), document.getElementById('r2'), document.getElementById('r3')];
+
+        // Precompute dash arrays; show 20% by default (static fallback)
+        rings.forEach((c, i) => {
+          const r = +c.getAttribute('r');
+          const L = 2 * Math.PI * r;
+          c.dataset.len = L;
+          c.style.strokeDasharray = L;
+          c.style.strokeDashoffset = L * 0.80; // 20% visible initially
+        });
+
+        let p = 0;
+        function frame(){
+          const rect = wrapper.getBoundingClientRect();
+          const vh = window.innerHeight || document.documentElement.clientHeight;
+
+          // When top of wrapper hits top of viewport (rect.top <= 0) progress begins.
+          // It ends when bottom of wrapper hits bottom of viewport: rect.top == -(rect.height - vh)
+          const total = Math.max(1, rect.height - vh);
+          let np = (0 - rect.top) / total; // 0..1
+          if (np < 0) np = 0;
+          if (np > 1) np = 1;
+
+          if (Math.abs(np - p) > 0.002){
+            p = np;
+            draw(p);
+          }
+          requestAnimationFrame(frame);
+        }
+
+        function draw(p){
+          // staggered completion (outer first, inner last)
+          rings.forEach((c, i) => {
+            const L = +c.dataset.len;
+            const ease = Math.min(1, Math.max(0, (p * (1 + i*0.15)))); // inner lags
+            const offset = L * (1 - ease);
+            c.style.strokeDashoffset = offset;
+          });
+          // subtle rotation as progress increases
+          const rot = p * 60; // degrees
+          ringsG.setAttribute('transform', `rotate(${rot} 500 500)`);
+        }
+
+        // Kick off
+        requestAnimationFrame(frame);
+        // Keep consistent on resize
+        window.addEventListener('resize', ()=>draw(p), {passive:true});
+      })();
+    </script>
   </section>
 
   <!-- Our Offerings Section -->
-  <section id="services" class="section glass-section">
+  <section id="services" style="padding:80px 20px; max-width:1100px; margin:0 auto;">
+  <h2 style="font-family:'Playfair Display', Georgia, serif; font-size:clamp(28px,4vw,40px); color:#111827; text-align:center; margin-bottom:28px;">
+    Our Offerings
+  </h2>
     <div class="container" data-aos="fade-up">
-      <h2 class="section-title font-playfair">Our Offerings</h2>
       <div class="card-grid">
         
         <!-- Phase 1: Personal Clarity -->
@@ -189,7 +310,15 @@
 
       </div>
     </div>
-  </section>
+</section>
+
+
+
+
+
+
+
+
 
 <!-- 12-Week Road Map -->
 <section id="roadmap" class="roadmap-section">
